--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Todo List</title>
   </head>
   <body>
+    <a href="js.html">click here(link)</a>
     <h1>todos</h1>
     <form id="form">
       <input type="text" class="input" id="input" placeholder="Enter your todo" autocomplete="off">
