--- a/try.html
+++ b/try.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+
 <body>
-<form name="contact" method="POST" data-netlify="true">
-    <div class="mb-3">
-        <label for="myfile" class="form-label">File</label>
-       <input type="file" id="myfile" name="filename">   
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+    <form name="contact" netlify method='post' enctype='multipart/form-data' action="/thank-you/">
+        <input type="text" name="name" />
+        <input type="email" name="email" />
+        <textarea name="message"></textarea>
+        <input type="file" id="file" name="file" multiple>
+    </form>
 </body>
+
 </html>
