--- a/try.html
+++ b/try.html
@@ -14,6 +14,7 @@
         <input type="email" name="email" />
         <textarea name="message"></textarea>
         <input type="file" id="file" name="file" multiple>
+         <button type="submit" >Submit</button>
     </form>
 </body>
 
